Update message text in yes.html

--- a/yes.html
+++ b/yes.html
@@ -150,7 +150,7 @@
     <div class="container">
         <div class="glow"></div>
         <div class="message">
-            Yay!!! 💖 You just made me the happiest person alive! 💕
+            Yeeeeyyy, walaa nang bawiaann yann aa.... mwaaaa hihihihi 💕
         </div>
         <img src="4.png" class="ice-bear" alt="Happy Ice Bear" />
         <button onclick="window.location.href='index.html'" class="back-button">Go Back</button>
